# hokusai

./: .dockerignore  .gitignore  .mise.toml  CHANGELOG.md  Dockerfile  DynamicInterpolation.ipynb  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  TODO.md  Untitled.ipynb  distribute.sh  get-hokusai.sh  hokusai.spec  hokusai_onedir.spec  hokusai_onefile.spec  pyproject.toml  pytest.ini  release-homebrew.sh  requirements.txt  setup.py
.circleci/: config.yml
.github/: dependabot.yml
docs/: Administering_Hokusai.md  Administrating Hokusai.md  Command_Reference.md  Configuration_Options.md  Getting Started.md  Getting_Started.md  Review_Apps.md  Volt_Review_App.md  develop.md  hokusai_files.md  hokusai_project_files.md
hokusai/: VERSION.txt  __init__.py  command.py  command_line.py  common.py  config.py  deployment.py  ecr.py  kubectl.py  secret.py  service.py  version.py
hokusai/cli/: __init__.py  base.py  dev.py  local.py  pipeline.py  production.py  registry.py  review_app.py  staging.py
hokusai/commands/: __init__.py  build.py  check.py  command_tree.py  config.py  configure.py  console.py  dependencies.py  deploy.py  deployment.py  development.py  diff.py  env.py  gitcompare.py  gitdiff.py  gitlog.py  history.py  images.py  init.py  install.py  kubernetes.py  logs.py  namespace.py  promote.py  pull.py  push.py  refresh.py  remote_environment.py  render.py  retag.py  review_app.py  run.py  secret.py  secrets.py  setup.py  stack.py  tags.py  test.py  version.py
hokusai/lib/: branch_detection.py  command.py  command_wrapper.py  common.py  config.py  config_loader.py  constants.py  default_branch.py  docker_compose_helpers.py  environment.py  exceptions.py  global_config.py  k8s_spec.py  log_configmap_changes.py  namespace.py  representers.py  s3.py  template_renderer.py  template_selector.py
hokusai/services/: aws.py  command_runner.py  configmap.py  deployment.py  docker.py  ecr.py  kubectl.py  kubernetes_spec.py  namespace.py  s3.py  secret.py  service.py  service_account.py  yaml_spec.py
hokusai/templates/: .dockerignore.j2  Dockerfile-alpine-ruby.j2  Dockerfile-elixir.j2  Dockerfile-node.j2  Dockerfile-python.j2  Dockerfile-rails.j2  Dockerfile-ruby.j2  Dockerfile.j2  common.yml.j2  development.yml.j2  dockerignore.j2  production.yml.j2  staging.yml.j2  test.yml.j2
org_templates/: development.yml.j2  staging.yml.j2  test.yml.j2
scripts/: ci_macos_build_hokusai.sh  create_release_tag.sh  integration_test_local.sh  update_version_file.sh
test/: __init__.py  test_common.py  utils.py
test/fixtures/: config.yml  deployment-metadata.yml  ecr-authorization-response.json  ecr-create-repository-response.json  ecr-empty-repositories-response.json  ecr-images-response.json  ecr-repositories-response.json  hokusai_vars.yml  kubernetes-config.yml  production.yml  sts-get-caller-identity-response.xml  template_config.yml
test/integration/: __init__.py  conftest.py  test_base.py  test_check.py  test_ecr.py  test_kubernetes.py  test_registry.py  test_review_app.py  test_staging.py
test/mocks/: mock_ecr.py
test/smoke/: __init__.py  test_review_app.py
test/unit/: __init__.py  test_command.py  test_command_wrapper.py  test_common.py  test_config.py  test_ecr.py  (+8 more)
(+47 files in other folders)
