[project]
dynamic = ["version"]

[tool.poetry]
name = "hokusai"
version = "0.0.0"
description = "Artsy Docker development toolkit"
authors = ["Isac Petruzzi <isac@artsymail.com>"]
maintainers = ["Jian-Feng Xu <jian-feng@artsymail.com>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/artsy/hokusai"

[tool.poetry.dependencies]
boto3 = "==1.21.28"
click = "==8.1.0"
click-repl = "==0.2.0"
Jinja2 = "==3.1.1"
MarkupSafe = "==2.1.1"
packaging = "==21.3"
prompt-toolkit = "==3.0.28"
python = "^3.7"
PyYAML = "==6.0"
termcolor = "==1.1.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
httpretty = "^1.1.4"
ipdb = "^0.13.9"
mock = "^4.0.3"
pyinstaller = "^4.5.1"
pylint = "^2.13.2"
setuptools-scm = "^7.1.0"
twine = "^3.8.0"
wheel = "^0.37.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.poetry.scripts]
hokusai = 'hokusai.command_line:main'

[tool.setuptools_scm]
write_to = "hokusai/_version.py"
