[project]
dynamic = ["version"]
name = "hokusai"

[tool.poetry]
name = "hokusai"
version = "999.999.999"
description = "Artsy Docker development toolkit"
authors = ["Isac Petruzzi <isac@artsymail.com>"]
maintainers = ["Jian-Feng Xu <jian-feng@artsymail.com>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/artsy/hokusai"
include = ["hokusai/VERSION"]

[tool.poetry.dependencies]
boto3 = "^1.34.25"
click = "==8.1.0"
click-repl = "==0.2.0"
Jinja2 = "==3.1.1"
MarkupSafe = "==2.1.1"
packaging = "^24.1"
prompt-toolkit = "==3.0.28"
python = ">=3.9,<3.11"
PyYAML = "==6.0.1"
termcolor = "==1.1.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
gitpython = "^3.1.40"
httpretty = "^1.1.4"
ipdb = "^0.13.9"
mock = "^4.0.3"
pyinstaller = "^4.6"
pylint = "^2.13.2"
pytest = "^7.2.1"
pytest-describe = "^2.0.1"
pytest-mock = "^3.10.0"
pytest-watch = "^4.2.0"
twine = "^3.8.0"
wheel = "^0.37.1"

[tool.poetry.group.dev.dependencies]
pytest-order = "^1.3.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools>=45"]

[tool.poetry.scripts]
hokusai = 'hokusai.command_line:main'
